# v0.0.1
* Initial set of components: logger, http
* Repo setup