@@ -1,3 +1,5 @@
+* Improve client logging
+
 # v0.0.1
 * Initial set of components: logger, http
 * Repo setup
